; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_uwp.c_frontend_uwp_environment_get.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_uwp.c_frontend_uwp_environment_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i32* }
%struct.TYPE_3__ = type { i32 }

@g_defaults = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@DEFAULT_DIR_ASSETS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [9 x i8] c"~\\assets\00", align 1
@DEFAULT_DIR_AUDIO_FILTER = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"~\\filters\\audio\00", align 1
@DEFAULT_DIR_VIDEO_FILTER = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [16 x i8] c"~\\filters\\video\00", align 1
@DEFAULT_DIR_CHEATS = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [9 x i8] c"~\\cheats\00", align 1
@DEFAULT_DIR_DATABASE = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [15 x i8] c"~\\database\\rdb\00", align 1
@DEFAULT_DIR_CURSOR = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [19 x i8] c"~\\database\\cursors\00", align 1
@DEFAULT_DIR_PLAYLIST = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [12 x i8] c"~\\playlists\00", align 1
@DEFAULT_DIR_RECORD_CONFIG = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [16 x i8] c"~\\config\\record\00", align 1
@DEFAULT_DIR_RECORD_OUTPUT = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [13 x i8] c"~\\recordings\00", align 1
@DEFAULT_DIR_MENU_CONFIG = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [9 x i8] c"~\\config\00", align 1
@DEFAULT_DIR_REMAP = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [16 x i8] c"~\\config\\remaps\00", align 1
@DEFAULT_DIR_WALLPAPERS = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [20 x i8] c"~\\assets\\wallpapers\00", align 1
@DEFAULT_DIR_THUMBNAILS = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [13 x i8] c"~\\thumbnails\00", align 1
@DEFAULT_DIR_OVERLAY = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [11 x i8] c"~\\overlays\00", align 1
@DEFAULT_DIR_CORE = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [8 x i8] c":\\cores\00", align 1
@DEFAULT_DIR_CORE_INFO = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [7 x i8] c"~\\info\00", align 1
@DEFAULT_DIR_AUTOCONFIG = common dso_local global i64 0, align 8
@.str.16 = private unnamed_addr constant [13 x i8] c"~\\autoconfig\00", align 1
@DEFAULT_DIR_SHADER = common dso_local global i64 0, align 8
@.str.17 = private unnamed_addr constant [10 x i8] c"~\\shaders\00", align 1
@DEFAULT_DIR_CORE_ASSETS = common dso_local global i64 0, align 8
@.str.18 = private unnamed_addr constant [12 x i8] c"~\\downloads\00", align 1
@DEFAULT_DIR_SCREENSHOT = common dso_local global i64 0, align 8
@.str.19 = private unnamed_addr constant [14 x i8] c"~\\screenshots\00", align 1
@DEFAULT_DIR_SRAM = common dso_local global i64 0, align 8
@.str.20 = private unnamed_addr constant [8 x i8] c"~\\saves\00", align 1
@DEFAULT_DIR_SAVESTATE = common dso_local global i64 0, align 8
@.str.21 = private unnamed_addr constant [9 x i8] c"~\\states\00", align 1
@DEFAULT_DIR_SYSTEM = common dso_local global i64 0, align 8
@.str.22 = private unnamed_addr constant [9 x i8] c"~\\system\00", align 1
@DEFAULT_DIR_LOGS = common dso_local global i64 0, align 8
@.str.23 = private unnamed_addr constant [7 x i8] c"~\\logs\00", align 1
@DEFAULT_DIR_VIDEO_LAYOUT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8**, i8*, i8*)* @frontend_uwp_environment_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frontend_uwp_environment_get(i32* %0, i8** %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %10 = load i64, i64* @DEFAULT_DIR_ASSETS, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @fill_pathname_expand_special(i32 %12, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 4)
  %14 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %15 = load i64, i64* @DEFAULT_DIR_AUDIO_FILTER, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @fill_pathname_expand_special(i32 %17, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 4)
  %19 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %20 = load i64, i64* @DEFAULT_DIR_VIDEO_FILTER, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @fill_pathname_expand_special(i32 %22, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 4)
  %24 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %25 = load i64, i64* @DEFAULT_DIR_CHEATS, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @fill_pathname_expand_special(i32 %27, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 4)
  %29 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %30 = load i64, i64* @DEFAULT_DIR_DATABASE, align 8
  %31 = getelementptr inbounds i32, i32* %29, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @fill_pathname_expand_special(i32 %32, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i32 4)
  %34 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %35 = load i64, i64* @DEFAULT_DIR_CURSOR, align 8
  %36 = getelementptr inbounds i32, i32* %34, i64 %35
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @fill_pathname_expand_special(i32 %37, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0), i32 4)
  %39 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %40 = load i64, i64* @DEFAULT_DIR_PLAYLIST, align 8
  %41 = getelementptr inbounds i32, i32* %39, i64 %40
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @fill_pathname_expand_special(i32 %42, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0), i32 4)
  %44 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %45 = load i64, i64* @DEFAULT_DIR_RECORD_CONFIG, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @fill_pathname_expand_special(i32 %47, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0), i32 4)
  %49 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %50 = load i64, i64* @DEFAULT_DIR_RECORD_OUTPUT, align 8
  %51 = getelementptr inbounds i32, i32* %49, i64 %50
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @fill_pathname_expand_special(i32 %52, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0), i32 4)
  %54 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %55 = load i64, i64* @DEFAULT_DIR_MENU_CONFIG, align 8
  %56 = getelementptr inbounds i32, i32* %54, i64 %55
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @fill_pathname_expand_special(i32 %57, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.9, i64 0, i64 0), i32 4)
  %59 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %60 = load i64, i64* @DEFAULT_DIR_REMAP, align 8
  %61 = getelementptr inbounds i32, i32* %59, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = call i32 @fill_pathname_expand_special(i32 %62, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.10, i64 0, i64 0), i32 4)
  %64 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %65 = load i64, i64* @DEFAULT_DIR_WALLPAPERS, align 8
  %66 = getelementptr inbounds i32, i32* %64, i64 %65
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @fill_pathname_expand_special(i32 %67, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.11, i64 0, i64 0), i32 4)
  %69 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %70 = load i64, i64* @DEFAULT_DIR_THUMBNAILS, align 8
  %71 = getelementptr inbounds i32, i32* %69, i64 %70
  %72 = load i32, i32* %71, align 4
  %73 = call i32 @fill_pathname_expand_special(i32 %72, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0), i32 4)
  %74 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %75 = load i64, i64* @DEFAULT_DIR_OVERLAY, align 8
  %76 = getelementptr inbounds i32, i32* %74, i64 %75
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @fill_pathname_expand_special(i32 %77, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.13, i64 0, i64 0), i32 4)
  %79 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %80 = load i64, i64* @DEFAULT_DIR_CORE, align 8
  %81 = getelementptr inbounds i32, i32* %79, i64 %80
  %82 = load i32, i32* %81, align 4
  %83 = call i32 @fill_pathname_expand_special(i32 %82, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.14, i64 0, i64 0), i32 4)
  %84 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %85 = load i64, i64* @DEFAULT_DIR_CORE_INFO, align 8
  %86 = getelementptr inbounds i32, i32* %84, i64 %85
  %87 = load i32, i32* %86, align 4
  %88 = call i32 @fill_pathname_expand_special(i32 %87, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.15, i64 0, i64 0), i32 4)
  %89 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %90 = load i64, i64* @DEFAULT_DIR_AUTOCONFIG, align 8
  %91 = getelementptr inbounds i32, i32* %89, i64 %90
  %92 = load i32, i32* %91, align 4
  %93 = call i32 @fill_pathname_expand_special(i32 %92, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.16, i64 0, i64 0), i32 4)
  %94 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %95 = load i64, i64* @DEFAULT_DIR_SHADER, align 8
  %96 = getelementptr inbounds i32, i32* %94, i64 %95
  %97 = load i32, i32* %96, align 4
  %98 = call i32 @fill_pathname_expand_special(i32 %97, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.17, i64 0, i64 0), i32 4)
  %99 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %100 = load i64, i64* @DEFAULT_DIR_CORE_ASSETS, align 8
  %101 = getelementptr inbounds i32, i32* %99, i64 %100
  %102 = load i32, i32* %101, align 4
  %103 = call i32 @fill_pathname_expand_special(i32 %102, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.18, i64 0, i64 0), i32 4)
  %104 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %105 = load i64, i64* @DEFAULT_DIR_SCREENSHOT, align 8
  %106 = getelementptr inbounds i32, i32* %104, i64 %105
  %107 = load i32, i32* %106, align 4
  %108 = call i32 @fill_pathname_expand_special(i32 %107, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.19, i64 0, i64 0), i32 4)
  %109 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %110 = load i64, i64* @DEFAULT_DIR_SRAM, align 8
  %111 = getelementptr inbounds i32, i32* %109, i64 %110
  %112 = load i32, i32* %111, align 4
  %113 = call i32 @fill_pathname_expand_special(i32 %112, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.20, i64 0, i64 0), i32 4)
  %114 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %115 = load i64, i64* @DEFAULT_DIR_SAVESTATE, align 8
  %116 = getelementptr inbounds i32, i32* %114, i64 %115
  %117 = load i32, i32* %116, align 4
  %118 = call i32 @fill_pathname_expand_special(i32 %117, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.21, i64 0, i64 0), i32 4)
  %119 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %120 = load i64, i64* @DEFAULT_DIR_SYSTEM, align 8
  %121 = getelementptr inbounds i32, i32* %119, i64 %120
  %122 = load i32, i32* %121, align 4
  %123 = call i32 @fill_pathname_expand_special(i32 %122, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.22, i64 0, i64 0), i32 4)
  %124 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_defaults, i32 0, i32 1), align 8
  %125 = load i64, i64* @DEFAULT_DIR_LOGS, align 8
  %126 = getelementptr inbounds i32, i32* %124, i64 %125
  %127 = load i32, i32* %126, align 4
  %128 = call i32 @fill_pathname_expand_special(i32 %127, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.23, i64 0, i64 0), i32 4)
  ret void
}

declare dso_local i32 @fill_pathname_expand_special(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
